# bad-c

./: Cargo.toml  README.md  ast.rs  cse.rs  dce.rs  ir.rs  irgen.rs  lex.rs  lib.rs  mem2reg.rs  parse.rs  regalloc.rs  riscv32.rs  rustfmt.toml  rv64.rs
.github/workflows/: rust.yml
opts/: cse.rs  dce.rs  fold.rs  licm.rs  mem2reg.rs  mod.rs  regalloc.rs
tests/: add.ir  fibs.c  fibs.unparsed.c  fourtytwo.c  fourtytwo.ir  integration_test.rs  mem2reg.c  mem2reg.ir  regalloc.c  stuff.c  stuff.ir
tests/include/: fib.h
