[package]
name = "shittyc"
version = "0.1.0"
edition = "2021"
description = "A bad subset-of-C compiler"

[profile.dev]
opt-level = 1           # Use slightly better optimizations.
overflow-checks = false # Disable integer overflow checks.

[dependencies]
bit-set = { version = "*", features = [] }

[lib]
path = "./lib.rs"
test = true
doctest = false

[[bin]]
name = "cpp"
path = "bin/cpp.rs"
test = false

[[bin]]
name = "cunparse"
path = "bin/cunparse.rs"
test = false
