[package]
name = "shittyc"
version = "0.1.0"
edition = "2021"
description = "A bad subset-of-C compiler"

[profile.dev]
opt-level = 1           # Use slightly better optimizations.
overflow-checks = false # Disable integer overflow checks.

[dependencies]
bit-set = { version = "*", features = [] }
# Once https://github.com/rust-lang/cargo/issues/1982 is done,
# move this to the binary!
clap = { version = "4.5.23", features = ["derive"] }
num-bigint = "0.4.6"

[lib]
path = "./lib.rs"
test = true
doctest = false

[[bin]]
name = "shittyc"
path = "./bin/shittyc.rs"
test = false
doctest = false
